--- a/package.json
+++ b/package.json
@@ -4,9 +4,20 @@
   "description": "Presentation webpage for alu0101056944/gcceproject",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
-  "keywords": [],
+  "keywords": ["gatsby"],
   "author": "Marcos Barrios",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gatsby": "^5.13.1",
+    "gatsby-plugin-sass": "^6.13.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.5"
+  }
 }
