--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "license": "ISC",
   "devDependencies": {
     "gatsby": "^5.13.1",
-    "gatsby-plugin-sass": "^6.13.0",
     "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-sass": "^6.13.0",
     "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-source-filesystem": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5"
