--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5"
+  },
+  "dependencies": {
+    "three": "^0.160.0"
   }
 }
